--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,15 @@
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
+                <configuration>
+                    <file>${build.directory}/${project.build.finalName}.jar</file>
+                    <pomFile>pom.xml</pomFile>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
