--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.hemeroc</groupId>
-    <artifactId>datetimepicker</artifactId>
+    <artifactId>javafx-datetimepicker</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -13,7 +13,7 @@
         <java.version>9</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <exec.mainClass>io.github.hemeroc.javafx.datetimepicker.DateTimePickerDemo</exec.mainClass>
+        <exec.mainClass>io.github.hemeroc.javafx.datetimepicker.demo.DateTimePickerDemo</exec.mainClass>
         <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
         <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
     </properties>
@@ -41,15 +41,6 @@
                             <mainClass>${exec.mainClass}</mainClass>
                         </manifest>
                     </archive>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8.2</version>
-                <configuration>
-                    <file>${build.directory}/${project.build.finalName}.jar</file>
-                    <pomFile>pom.xml</pomFile>
                 </configuration>
             </plugin>
         </plugins>
